responsive design fixed header to shift left

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,16 +18,13 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
-  position: relative;
+  position: sticky;
+  padding-top: 120px;
 }
 
 
 
-main {
-  width: 90%;
-  margin: auto;
-  background-color: #f4f1ec;
-}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
